-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u20
-
Component/s: hotspot
-
Environment:
G1 + Xcomp
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8063504 | 8u45 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8040645 | 8u40 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8070789 | emb-8u47 | Thomas Schatzl | P4 | Resolved | Fixed | team |
;; Using jvm: "/scratch/local/aurora/sandbox/sca/vmsqe/jdk/pit/2014-03-28-223133.amurillo.hs25-20-b08-jdk8u20-b08-control/fastdebug/linux-i586/jre/lib/i386/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/223133.amurillo/s/hotspot/src/share/vm/gc_implementation/g1/g1CodeCacheRemSet.cpp:200), pid=11510, tid=4152347504
# assert(_num_chunks_handed_out == 0) failed: No elements must have been handed out yet
#
# JRE version: Java(TM) SE Runtime Environment (8.0) (build 1.8.0-internal-fastdebug-201403282231.amurillo.hs25-20-b08-jdk8u2-b00)
# Java VM: Java HotSpot(TM) Client VM (25.20-b08-fastdebug compiled mode, sharing linux-x86 )
# Core dump written. Default location: /scratch/local/aurora/sandbox/results/workDir/sanity/ExecuteInternalVMTests/core or core.11510
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0xf660a800): JavaThread "main" [_thread_in_vm, id=11513, stack(0xf77ac000,0xf77fd000)]
Stack: [0xf77ac000,0xf77fd000], sp=0xf77fb0b0, free space=316k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x99fb75] VMError::report_and_die()+0x185;; VMError::report_and_die()+0x185
V [libjvm.so+0x3774d8] report_vm_error(char const*, int, char const*, char const*)+0x68;; report_vm_error(char const*, int, char const*, char const*)+0x68
V [libjvm.so+0x3e6046] G1CodeRootSet::test()+0x726;; G1CodeRootSet::test()+0x726
V [libjvm.so+0x574f13] execute_internal_vm_tests()+0x1c3;; execute_internal_vm_tests()+0x1c3
V [libjvm.so+0x576c8a] JNI_CreateJavaVM+0x1ba;; JNI_CreateJavaVM+0x1ba
C [libjli.so+0x72a8] JavaMain+0x98;; JavaMain+0x98
C [libpthread.so.0+0x6a49]
C [libc.so.6+0xdee1e] clone+0x5e
Issue could be reproduced when VM started with -XX:+UseG1GC and -Xcomp, but nothing bad happens when -Xmixed is used.
Test make assumption that there are no chunks in use, however this assumption fails if some nmethods where registered before ::test execution.
- backported by
-
JDK-8040645 G1CodeRootSet::test fails with assert(_num_chunks_handed_out == 0) failed: No elements must have been handed out yet
-
- Resolved
-
-
JDK-8063504 G1CodeRootSet::test fails with assert(_num_chunks_handed_out == 0) failed: No elements must have been handed out yet
-
- Resolved
-
-
JDK-8070789 G1CodeRootSet::test fails with assert(_num_chunks_handed_out == 0) failed: No elements must have been handed out yet
-
- Resolved
-
- duplicates
-
JDK-8039839 G1: TestCodeCacheRemSet_test() fails intermittently
-
- Closed
-
- relates to
-
JDK-8035406 Improve data structure for Code Cache remembered sets
-
- Resolved
-
-
JDK-8040792 G1: Memory usage calculation uses sizeof(this) instead of sizeof(classname)
-
- Resolved
-